versions/0.9.0/_sources/refs/_aws-cdk_aws-lambda.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"92ZG2l1mELuIEtx3KyBHlWEd9SCG3JLKwX/DOccnTQA="}

@aws-cdk/aws-lambda
===================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.Lambda/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.Lambda" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.Lambda --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.Lambda" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/lambda/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:lambda:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="lambda" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>lambda</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:lambda:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='lambda', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-lambda/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-lambda@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-lambda": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-lambda@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-lambda/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-lambda@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-lambda": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-lambda@0.9.0



.. mdinclude:: ./__aws-cdk_aws-lambda.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-lambda

Alias
^^^^^

.. py:class:: Alias(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.Alias;

      .. code-tab:: javascript

         const { Alias } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { Alias } from '@aws-cdk/aws-lambda';



   A new alias to a particular version of a Lambda function.


   :extends: :py:class:`~@aws-cdk/aws-lambda.FunctionRef`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-lambda.AliasProps`

   .. py:method:: addPermission(name, permission)

      Adds a permission to the Lambda resource policy.


      :param name: 
      :type name: string
      :param permission: 
      :type permission: :py:class:`~@aws-cdk/aws-lambda.Permission`


   .. py:attribute:: canCreatePermissions

      Whether the addPermission() call adds any permissions  True for new Lambdas, false for imported Lambdas (they might live in different accounts).


      :type: boolean *(readonly)*


   .. py:attribute:: functionArn

      ARN of this alias  Used to be able to use Alias in place of a regular Lambda. Lambda accepts ARNs everywhere it accepts function names.


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionArn` *(readonly)*


   .. py:attribute:: functionName

      ARN of this alias  Used to be able to use Alias in place of a regular Lambda. Lambda accepts ARNs everywhere it accepts function names.


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionName` *(readonly)*


   .. py:attribute:: role

      Role associated with this alias


      :type: :py:class:`@aws-cdk/aws-iam.Role` or undefined *(readonly)*


AliasArn
^^^^^^^^

.. py:class:: AliasArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.AliasArn;

      .. code-tab:: javascript

         const { AliasArn } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { AliasArn } from '@aws-cdk/aws-lambda';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

AliasProps (interface)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: AliasProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.AliasProps;

      .. code-tab:: javascript

         // AliasProps is an interface

      .. code-tab:: typescript

         import { AliasProps } from '@aws-cdk/aws-lambda';



   Properties for a new Lambda alias




   .. py:attribute:: aliasName

      Name of this alias


      :type: string


   .. py:attribute:: version

      Function version this alias refers to  Use lambda.addVersion() to obtain a new lambda version to refer to.


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionVersion`


   .. py:attribute:: additionalVersions

      Additional versions with individual weights this alias points to  Individual additional version weights specified here should add up to (less than) one. All remaining weight is routed to the default version.  For example, the config is        version: "1"       additionalVersions: [{ version: "2", weight: 0.05 }]  Then 5% of traffic will be routed to function version 2, while the remaining 95% of traffic will be routed to function version 1.


      :type: :py:class:`~@aws-cdk/aws-lambda.VersionWeight`[] or undefined


   .. py:attribute:: description

      Description for the alias


      :type: string or undefined


AssetCode
^^^^^^^^^

.. py:class:: AssetCode(path, packaging)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.AssetCode;

      .. code-tab:: javascript

         const { AssetCode } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { AssetCode } from '@aws-cdk/aws-lambda';



   Lambda code from a local directory.


   :extends: :py:class:`~@aws-cdk/aws-lambda.Code`
   :param path: The path to the asset file or directory.
   :type path: string
   :param packaging: The asset packaging format
   :type packaging: :py:class:`@aws-cdk/assets.AssetPackaging`

   .. py:method:: bind(lambda)

      Called when the lambda is initialized to allow this object to bind to the stack, add resources and have fun.


      :param lambda: 
      :type lambda: :py:class:`~@aws-cdk/aws-lambda.Function`


   .. py:method:: toJSON() -> @aws-cdk/aws-lambda.cloudformation.FunctionResource.CodeProperty

      Called during stack synthesis to render the CodePropery for the Lambda function.


      :rtype: :py:class:`~@aws-cdk/aws-lambda.cloudformation.FunctionResource.CodeProperty`


   .. py:attribute:: packaging

      The asset packaging format


      :type: :py:class:`@aws-cdk/assets.AssetPackaging` *(readonly)*


   .. py:attribute:: path

      The path to the asset file or directory.


      :type: string *(readonly)*


Code
^^^^

.. py:class:: Code()

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.Code;

      .. code-tab:: javascript

         const { Code } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { Code } from '@aws-cdk/aws-lambda';



   :abstract: Yes

   .. py:staticmethod:: bucket(bucket, key, [objectVersion]) -> @aws-cdk/aws-lambda.S3Code

      :param bucket: The S3 bucket
      :type bucket: :py:class:`@aws-cdk/aws-s3.BucketRef`
      :param key: The object key
      :type key: string
      :param objectVersion: Optional S3 object version
      :type objectVersion: string or undefined
      :return: `LambdaS3Code` associated with the specified S3 object.
      :rtype: :py:class:`~@aws-cdk/aws-lambda.S3Code`


   .. py:staticmethod:: directory(directoryToZip) -> @aws-cdk/aws-lambda.AssetCode

      :param directoryToZip: The directory to zip
      :type directoryToZip: string
      :return: Zip archives the contents of a directory on disk and uses this
as the lambda handler's code.
      :rtype: :py:class:`~@aws-cdk/aws-lambda.AssetCode`


   .. py:staticmethod:: file(filePath) -> @aws-cdk/aws-lambda.AssetCode

      :param filePath: The file path
      :type filePath: string
      :return: Uses a file on disk as a lambda handler's code.
      :rtype: :py:class:`~@aws-cdk/aws-lambda.AssetCode`


   .. py:staticmethod:: inline(code) -> @aws-cdk/aws-lambda.InlineCode

      :param code: The actual handler code (limited to 4KiB)
      :type code: string
      :return: `LambdaInlineCode` with inline code.
      :rtype: :py:class:`~@aws-cdk/aws-lambda.InlineCode`


   .. py:method:: bind(_lambda)

      Called when the lambda is initialized to allow this object to bind to the stack, add resources and have fun.


      :param _lambda: 
      :type _lambda: :py:class:`~@aws-cdk/aws-lambda.Function`


   .. py:method:: toJSON() -> @aws-cdk/aws-lambda.cloudformation.FunctionResource.CodeProperty

      Called during stack synthesis to render the CodePropery for the Lambda function.


      :rtype: :py:class:`~@aws-cdk/aws-lambda.cloudformation.FunctionResource.CodeProperty`
      :abstract: Yes


EventSourceMappingName
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: EventSourceMappingName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.EventSourceMappingName;

      .. code-tab:: javascript

         const { EventSourceMappingName } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { EventSourceMappingName } from '@aws-cdk/aws-lambda';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

Function
^^^^^^^^

.. py:class:: Function(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.Function;

      .. code-tab:: javascript

         const { Function } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { Function } from '@aws-cdk/aws-lambda';



   Deploys a file from from inside the construct library as a function.  The supplied file is subject to the 4096 bytes limit of being embedded in a CloudFormation template.  The construct includes an associated role with the lambda.  This construct does not yet reproduce all features from the underlying resource library.


   :extends: :py:class:`~@aws-cdk/aws-lambda.FunctionRef`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-lambda.FunctionProps`

   .. py:method:: addEnvironment(key, value)

      Adds an environment variable to this Lambda function. If this is a ref to a Lambda function, this operation results in a no-op.


      :param key: The environment variable key.
      :type key: string
      :param value: The environment variable's value.
      :type value: any


   .. py:method:: addVersion(name, [codeSha256, [description]]) -> @aws-cdk/aws-lambda.FunctionVersion

      Add a new version for this Lambda  If you want to deploy through CloudFormation and use aliases, you need to add a new version (with a new name) to your Lambda every time you want to deploy an update. An alias can then refer to the newly created Version.  All versions should have distinct names, and you should not delete versions as long as your Alias needs to refer to them.


      :param name: A unique name for this version
      :type name: string
      :param codeSha256: The SHA-256 hash of the most recently deployed Lambda source code, or omit to skip validation.
      :type codeSha256: string or undefined
      :param description: A description for this version.
      :type description: string or undefined
      :return: A new Version object.
      :rtype: :py:class:`~@aws-cdk/aws-lambda.FunctionVersion`


   .. py:attribute:: canCreatePermissions

      Whether the addPermission() call adds any permissions  True for new Lambdas, false for imported Lambdas (they might live in different accounts).


      :type: boolean *(readonly)*


   .. py:attribute:: functionArn

      ARN of this function


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionArn` *(readonly)*


   .. py:attribute:: functionName

      Name of this function


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionName` *(readonly)*


   .. py:attribute:: handler

      The name of the handler configured for this lambda.


      :type: string *(readonly)*


   .. py:attribute:: runtime

      The runtime configured for this lambda.


      :type: :py:class:`~@aws-cdk/aws-lambda.Runtime` *(readonly)*


   .. py:attribute:: role

      Execution role associated with this function


      :type: :py:class:`@aws-cdk/aws-iam.Role` or undefined *(readonly)*


FunctionArn
^^^^^^^^^^^

.. py:class:: FunctionArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.FunctionArn;

      .. code-tab:: javascript

         const { FunctionArn } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { FunctionArn } from '@aws-cdk/aws-lambda';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

FunctionName
^^^^^^^^^^^^

.. py:class:: FunctionName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.FunctionName;

      .. code-tab:: javascript

         const { FunctionName } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { FunctionName } from '@aws-cdk/aws-lambda';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

FunctionProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: FunctionProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.FunctionProps;

      .. code-tab:: javascript

         // FunctionProps is an interface

      .. code-tab:: typescript

         import { FunctionProps } from '@aws-cdk/aws-lambda';





   .. py:attribute:: code

      The source code of your Lambda function. You can point to a file in an Amazon Simple Storage Service (Amazon S3) bucket or specify your source code as inline text.


      :type: :py:class:`~@aws-cdk/aws-lambda.Code`


   .. py:attribute:: handler

      The name of the function (within your source code) that Lambda calls to start running your code. For more information, see the Handler property in the AWS Lambda Developer Guide.  NOTE: If you specify your source code as inline text by specifying the ZipFile property within the Code property, specify index.function_name as the handler.


      :type: string


   .. py:attribute:: runtime

      The runtime environment for the Lambda function that you are uploading. For valid values, see the Runtime property in the AWS Lambda Developer Guide.


      :type: :py:class:`~@aws-cdk/aws-lambda.Runtime`


   .. py:attribute:: deadLetterQueue

      The SQS queue to use if DLQ is enabled.


      :type: :py:class:`@aws-cdk/aws-sqs.QueueRef` or undefined


   .. py:attribute:: deadLetterQueueEnabled

      Enabled DLQ. If `deadLetterQueue` is undefined, an SQS queue with default options will be defined for your Function.


      :type: boolean or undefined


   .. py:attribute:: description

      A description of the function.


      :type: string or undefined


   .. py:attribute:: environment

      Key-value pairs that Lambda caches and makes available for your Lambda functions. Use environment variables to apply configuration changes, such as test and production environment configurations, without changing your Lambda function source code.


      :type: string => any or undefined


   .. py:attribute:: functionName

      A name for the function. If you don't specify a name, AWS CloudFormation generates a unique physical ID and uses that ID for the function's name. For more information, see Name Type.


      :type: string or undefined


   .. py:attribute:: initialPolicy

      Initial policy statements to add to the created Lambda Role.  You can call `addToRolePolicy` to the created lambda to add statements post creation.


      :type: :py:class:`@aws-cdk/cdk.PolicyStatement`[] or undefined


   .. py:attribute:: memorySize

      The amount of memory, in MB, that is allocated to your Lambda function. Lambda uses this value to proportionally allocate the amount of CPU power. For more information, see Resource Model in the AWS Lambda Developer Guide.


      :type: number or undefined


   .. py:attribute:: role

      Lambda execution role.  This is the role that will be assumed by the function upon execution. It controls the permissions that the function will have. The Role must be assumable by the 'lambda.amazonaws.com' service principal.


      :type: :py:class:`@aws-cdk/aws-iam.Role` or undefined


   .. py:attribute:: securityGroup

      What security group to associate with the Lambda's network interfaces.  Only used if 'vpc' is supplied.


      :type: :py:class:`@aws-cdk/aws-ec2.SecurityGroupRef` or undefined


   .. py:attribute:: timeout

      The function execution time (in seconds) after which Lambda terminates the function. Because the execution time affects cost, set this value based on the function's expected execution time.


      :type: number or undefined


   .. py:attribute:: vpc

      VPC network to place Lambda network interfaces  Specify this if the Lambda function needs to access resources in a VPC.


      :type: :py:class:`@aws-cdk/aws-ec2.VpcNetworkRef` or undefined


   .. py:attribute:: vpcPlacement

      Where to place the network interfaces within the VPC.  Only used if 'vpc' is supplied. Note: internet access for Lambdas requires a NAT gateway, so picking Public subnets is not allowed.


      :type: :py:class:`@aws-cdk/aws-ec2.VpcPlacementStrategy` or undefined


FunctionRef
^^^^^^^^^^^

.. py:class:: FunctionRef(parent, id)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.FunctionRef;

      .. code-tab:: javascript

         const { FunctionRef } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { FunctionRef } from '@aws-cdk/aws-lambda';



   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :implements: :py:class:`@aws-cdk/aws-events.IEventRuleTarget`
   :implements: :py:class:`@aws-cdk/aws-logs.ILogSubscriptionDestination`
   :implements: :py:class:`@aws-cdk/aws-s3-notifications.IBucketNotificationDestination`
   :implements: :py:class:`@aws-cdk/aws-ec2.IConnectable`
   :abstract: Yes
   :param parent: The parent construct
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param id: 
   :type id: string

   .. py:staticmethod:: import(parent, name, ref) -> @aws-cdk/aws-lambda.FunctionRef

      Creates a Lambda function object which represents a function not defined within this stack.        Lambda.import(this, 'MyImportedFunction', { lambdaArn: new LambdaArn('arn:aws:...') });


      :param parent: The parent construct
      :type parent: :py:class:`@aws-cdk/cdk.Construct`
      :param name: The name of the lambda construct
      :type name: string
      :param ref: A reference to a Lambda function. Can be created manually (see example above) or obtained through a call to `lambda.export()`.
      :type ref: :py:class:`~@aws-cdk/aws-lambda.FunctionRefProps`
      :rtype: :py:class:`~@aws-cdk/aws-lambda.FunctionRef`


   .. py:staticmethod:: metricAll(metricName, [props]) -> @aws-cdk/aws-cloudwatch.Metric

      Return the given named metric for this Lambda


      :param metricName: 
      :type metricName: string
      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:staticmethod:: metricAllConcurrentExecutions([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the number of concurrent executions across all Lambdas


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:staticmethod:: metricAllDuration([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the Duration executing all Lambdas


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:staticmethod:: metricAllErrors([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the number of Errors executing all Lambdas


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:staticmethod:: metricAllInvocations([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the number of invocations of all Lambdas


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:staticmethod:: metricAllThrottles([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the number of throttled invocations of all Lambdas


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:staticmethod:: metricAllUnreservedConcurrentExecutions([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the number of unreserved concurrent executions across all Lambdas


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:method:: addPermission(id, permission)

      Adds a permission to the Lambda resource policy.


      :param id: The id ƒor the permission construct
      :type id: string
      :param permission: 
      :type permission: :py:class:`~@aws-cdk/aws-lambda.Permission`


   .. py:method:: addToRolePolicy(statement)

      :param statement: 
      :type statement: :py:class:`@aws-cdk/cdk.PolicyStatement`


   .. py:method:: asBucketNotificationDestination(bucketArn, bucketId) -> @aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps

      Allows this Lambda to be used as a destination for bucket notifications. Use `bucket.onEvent(lambda)` to subscribe.


      :param bucketArn: 
      :type bucketArn: :py:class:`@aws-cdk/cdk.Arn`
      :param bucketId: 
      :type bucketId: string
      :rtype: :py:class:`@aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps`


   .. py:method:: asEventRuleTarget(ruleArn, ruleId) -> @aws-cdk/aws-events.EventRuleTargetProps

      Returns a RuleTarget that can be used to trigger this Lambda as a result from a CloudWatch event.


      :param ruleArn: 
      :type ruleArn: :py:class:`@aws-cdk/aws-events.RuleArn`
      :param ruleId: 
      :type ruleId: string
      :rtype: :py:class:`@aws-cdk/aws-events.EventRuleTargetProps`


   .. py:method:: export() -> @aws-cdk/aws-lambda.FunctionRefProps

      Export this Function (without the role)


      :rtype: :py:class:`~@aws-cdk/aws-lambda.FunctionRefProps`


   .. py:method:: logSubscriptionDestination(sourceLogGroup) -> @aws-cdk/aws-logs.LogSubscriptionDestination

      Return the properties required to send subscription events to this destination.  If necessary, the destination can use the properties of the SubscriptionFilter object itself to configure its permissions to allow the subscription to write to it.  The destination may reconfigure its own permissions in response to this function call.


      :param sourceLogGroup: 
      :type sourceLogGroup: :py:class:`@aws-cdk/aws-logs.LogGroupRef`
      :rtype: :py:class:`@aws-cdk/aws-logs.LogSubscriptionDestination`


   .. py:method:: metric(metricName, [props]) -> @aws-cdk/aws-cloudwatch.Metric

      Return the given named metric for this Lambda


      :param metricName: 
      :type metricName: string
      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:method:: metricDuration([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the Duration of this Lambda


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:method:: metricErrors([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the Errors executing this Lambda


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:method:: metricInvocations([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the number of invocations of this Lambda


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:method:: metricThrottles([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the number of throttled invocations of this Lambda


      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricCustomization` or undefined
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`


   .. py:attribute:: canCreatePermissions

      Whether the addPermission() call adds any permissions  True for new Lambdas, false for imported Lambdas (they might live in different accounts).


      :type: boolean *(readonly)* *(abstract)*


   .. py:attribute:: connections

      Access the Connections object  Will fail if not a VPC-enabled Lambda Function


      :type: :py:class:`@aws-cdk/aws-ec2.Connections` *(readonly)*


   .. py:attribute:: functionArn

      The ARN fo the function.


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionArn` *(readonly)* *(abstract)*


   .. py:attribute:: functionName

      The name of the function.


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionName` *(readonly)* *(abstract)*


   .. py:attribute:: isBoundToVpc

      Whether or not this Lambda function was bound to a VPC  If this is is `false`, trying to access the `connections` object will fail.


      :type: boolean *(readonly)*


   .. py:attribute:: role

      The IAM role associated with this function.


      :type: :py:class:`@aws-cdk/aws-iam.Role` or undefined *(readonly)* *(abstract)*


FunctionRefProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: FunctionRefProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.FunctionRefProps;

      .. code-tab:: javascript

         // FunctionRefProps is an interface

      .. code-tab:: typescript

         import { FunctionRefProps } from '@aws-cdk/aws-lambda';



   Represents a Lambda function defined outside of this stack.




   .. py:attribute:: functionArn

      The ARN of the Lambda function.  Format: arn:<partition>:lambda:<region>:<account-id>:function:<function-name>


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionArn`


   .. py:attribute:: role

      The IAM execution role associated with this function.  If the role is not specified, any role-related operations will no-op.


      :type: :py:class:`@aws-cdk/aws-iam.Role` or undefined


   .. py:attribute:: securityGroupId

      Id of the securityGroup for this Lambda, if in a VPC.  This needs to be given in order to support allowing connections to this Lambda.


      :type: :py:class:`@aws-cdk/aws-ec2.SecurityGroupId` or undefined


FunctionVersion
^^^^^^^^^^^^^^^

.. py:class:: FunctionVersion(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.FunctionVersion;

      .. code-tab:: javascript

         const { FunctionVersion } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { FunctionVersion } from '@aws-cdk/aws-lambda';



   A single newly-deployed version of a Lambda function.  This object exists to--at deploy time--query the "then-current" version of the Lambda function that it refers to. This Version object can then be used in `Alias` to refer to a particular deployment of a Lambda.  This means that for every new update you deploy to your Lambda (using the CDK and Aliases), you must always create a new Version object. In particular, it must have a different name, so that a new resource is created.  If you want to ensure that you're associating the right version with the right deployment, specify the `codeSha256` property while creating the `Version.  *


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-lambda.FunctionVersionProps`

   .. py:attribute:: functionVersion

      The most recently deployed version of this function.


      :type: :py:class:`~@aws-cdk/aws-lambda.Version` *(readonly)*


   .. py:attribute:: lambda

      Lambda object this version is associated with


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionRef` *(readonly)*


FunctionVersionProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: FunctionVersionProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.FunctionVersionProps;

      .. code-tab:: javascript

         // FunctionVersionProps is an interface

      .. code-tab:: typescript

         import { FunctionVersionProps } from '@aws-cdk/aws-lambda';



   Properties for a new Lambda version




   .. py:attribute:: lambda

      Function to get the value of


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionRef`


   .. py:attribute:: codeSha256

      SHA256 of the version of the Lambda source code  Specify to validate that you're deploying the right version.


      :type: string or undefined


   .. py:attribute:: description

      Description of the version


      :type: string or undefined


IJavaScriptLambdaHandler (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: IJavaScriptLambdaHandler

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.IJavaScriptLambdaHandler;

      .. code-tab:: javascript

         // IJavaScriptLambdaHandler is an interface

      .. code-tab:: typescript

         import { IJavaScriptLambdaHandler } from '@aws-cdk/aws-lambda';



   Defines the handler code for an inline JavaScript lambda function.  AWS Lambda invokes your Lambda function via a handler object. A handler represents the name of your Lambda function (and serves as the entry point that AWS Lambda uses to execute your function code. For example:




   .. py:method:: fn(event, context, callback)

      The main Lambda entrypoint.


      :param event: Event sources can range from a supported AWS service or custom applications that invoke your Lambda function. For examples, see [Sample Events Published by Event Sources](https://docs.aws.amazon.com/lambda/latest/dg/eventsources.html).
      :type event: any
      :param context: AWS Lambda uses this parameter to provide details of your Lambda function's execution. For more information, see [The Context Object](https://docs.aws.amazon.com/lambda/latest/dg/nodejs-prog-model-context.html).
      :type context: any
      :param callback: The Node.js runtimes v6.10 and v8.10 support the optional callback parameter. You can use it to explicitly return information back to the caller. Signature is `callback(err, response)`.
      :type callback: any


InlinableJavaScriptRuntime (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: InlinableJavaScriptRuntime

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.InlinableJavaScriptRuntime;

      .. code-tab:: javascript

         // InlinableJavaScriptRuntime is an interface

      .. code-tab:: typescript

         import { InlinableJavaScriptRuntime } from '@aws-cdk/aws-lambda';



   A ``LambdaRuntime`` that can be used for inlining JavaScript.


   :extends: :py:class:`~@aws-cdk/aws-lambda.InlinableRuntime`


InlinableRuntime (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: InlinableRuntime

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.InlinableRuntime;

      .. code-tab:: javascript

         // InlinableRuntime is an interface

      .. code-tab:: typescript

         import { InlinableRuntime } from '@aws-cdk/aws-lambda';



   A ``LambdaRuntime`` that can be used in conjunction with the ``ZipFile`` property of the ``AWS::Lambda::Function`` resource.




   .. py:attribute:: name

      :type: string *(readonly)*


   .. py:attribute:: supportsInlineCode

      :type: boolean *(readonly)*


InlineCode
^^^^^^^^^^

.. py:class:: InlineCode(code)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.InlineCode;

      .. code-tab:: javascript

         const { InlineCode } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { InlineCode } from '@aws-cdk/aws-lambda';



   Lambda code from an inline string (limited to 4KiB).


   :extends: :py:class:`~@aws-cdk/aws-lambda.Code`
   :param code: 
   :type code: string

   .. py:method:: bind(lambda)

      Called when the lambda is initialized to allow this object to bind to the stack, add resources and have fun.


      :param lambda: 
      :type lambda: :py:class:`~@aws-cdk/aws-lambda.Function`


   .. py:method:: toJSON() -> @aws-cdk/aws-lambda.cloudformation.FunctionResource.CodeProperty

      Called during stack synthesis to render the CodePropery for the Lambda function.


      :rtype: :py:class:`~@aws-cdk/aws-lambda.cloudformation.FunctionResource.CodeProperty`


   .. py:attribute:: code

      :type: string


InlineJavaScriptFunction
^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: InlineJavaScriptFunction(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.InlineJavaScriptFunction;

      .. code-tab:: javascript

         const { InlineJavaScriptFunction } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { InlineJavaScriptFunction } from '@aws-cdk/aws-lambda';



   A lambda function with inline node.js code.  Usage:      new InlineJavaScriptLambda(this, 'MyFunc', {       handler: {         fn: (event, context, callback) => {           console.log('hello, world');           callback();         }       }     });  This will define a node.js 6.10 function with the provided function has the handler code.


   :extends: :py:class:`~@aws-cdk/aws-lambda.Function`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-lambda.InlineJavaScriptLambdaProps`

InlineJavaScriptLambdaProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: InlineJavaScriptLambdaProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.InlineJavaScriptLambdaProps;

      .. code-tab:: javascript

         // InlineJavaScriptLambdaProps is an interface

      .. code-tab:: typescript

         import { InlineJavaScriptLambdaProps } from '@aws-cdk/aws-lambda';





   .. py:attribute:: handler

      The lambda handler as a javascript function.  This must be a javascript function object. The reason it is `any` is due to limitations of the jsii compiler.


      :type: :py:class:`~@aws-cdk/aws-lambda.IJavaScriptLambdaHandler`


   .. py:attribute:: description

      A description of the function.


      :type: string or undefined


   .. py:attribute:: environment

      Key-value pairs that Lambda caches and makes available for your Lambda functions. Use environment variables to apply configuration changes, such as test and production environment configurations, without changing your Lambda function source code.


      :type: string => any or undefined


   .. py:attribute:: functionName

      A name for the function. If you don't specify a name, AWS CloudFormation generates a unique physical ID and uses that ID for the function's name. For more information, see Name Type.


      :type: string or undefined


   .. py:attribute:: memorySize

      The amount of memory, in MB, that is allocated to your Lambda function. Lambda uses this value to proportionally allocate the amount of CPU power. For more information, see Resource Model in the AWS Lambda Developer Guide.


      :type: number or undefined


   .. py:attribute:: runtime

      The runtime environment for the Lambda function that you are uploading. For valid values, see the Runtime property in the AWS Lambda Developer Guide.


      :type: :py:class:`~@aws-cdk/aws-lambda.InlinableJavaScriptRuntime` or undefined


   .. py:attribute:: timeout

      The function execution time (in seconds) after which Lambda terminates the function. Because the execution time affects cost, set this value based on the function's expected execution time.


      :type: number or undefined


LambdaRuntimeProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LambdaRuntimeProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.LambdaRuntimeProps;

      .. code-tab:: javascript

         // LambdaRuntimeProps is an interface

      .. code-tab:: typescript

         import { LambdaRuntimeProps } from '@aws-cdk/aws-lambda';





   .. py:attribute:: supportsInlineCode

      Whether the ``ZipFile`` (aka inline code) property can be used with this runtime.


      :type: boolean or undefined *(readonly)*


Permission (interface)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: Permission

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.Permission;

      .. code-tab:: javascript

         // Permission is an interface

      .. code-tab:: typescript

         import { Permission } from '@aws-cdk/aws-lambda';



   Represents a permission statement that can be added to a Lambda's resource policy via the `addToResourcePolicy` method.




   .. py:attribute:: principal

      The entity for which you are granting permission to invoke the Lambda function. This entity can be any valid AWS service principal, such as s3.amazonaws.com or sns.amazonaws.com, or, if you are granting cross-account permission, an AWS account ID. For example, you might want to allow a custom application in another AWS account to push events to Lambda by invoking your function.  The principal can be either an AccountPrincipal or a ServicePrincipal.


      :type: :py:class:`@aws-cdk/cdk.PolicyPrincipal`


   .. py:attribute:: sourceAccount

      The AWS account ID (without hyphens) of the source owner. For example, if you specify an S3 bucket in the SourceArn property, this value is the bucket owner's account ID. You can use this property to ensure that all source principals are owned by a specific account.


      :type: any


   .. py:attribute:: action

      The Lambda actions that you want to allow in this statement. For example, you can specify lambda:CreateFunction to specify a certain action, or use a wildcard (``lambda:*``) to grant permission to all Lambda actions. For a list of actions, see Actions and Condition Context Keys for AWS Lambda in the IAM User Guide.


      :type: string or undefined


   .. py:attribute:: eventSourceToken

      A unique token that must be supplied by the principal invoking the function.


      :type: string or undefined


   .. py:attribute:: sourceArn

      The ARN of a resource that is invoking your function. When granting Amazon Simple Storage Service (Amazon S3) permission to invoke your function, specify this property with the bucket ARN as its value. This ensures that events generated only from the specified bucket, not just any bucket from any AWS account that creates a mapping to your function, can invoke the function.


      :type: :py:class:`@aws-cdk/cdk.Arn` or undefined


PipelineInvokeAction
^^^^^^^^^^^^^^^^^^^^

.. py:class:: PipelineInvokeAction(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.PipelineInvokeAction;

      .. code-tab:: javascript

         const { PipelineInvokeAction } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { PipelineInvokeAction } from '@aws-cdk/aws-lambda';



   CodePipeline invoke Action that is provided by an AWS Lambda function.


   :extends: :py:class:`@aws-cdk/aws-codepipeline-api.Action`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-lambda.PipelineInvokeActionProps`

   .. py:method:: addInputArtifact(artifact) -> @aws-cdk/aws-codepipeline-api.Action

      Add an input artifact


      :param artifact: 
      :type artifact: :py:class:`@aws-cdk/aws-codepipeline-api.Artifact`
      :rtype: :py:class:`@aws-cdk/aws-codepipeline-api.Action`


PipelineInvokeActionProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: PipelineInvokeActionProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.PipelineInvokeActionProps;

      .. code-tab:: javascript

         // PipelineInvokeActionProps is an interface

      .. code-tab:: typescript

         import { PipelineInvokeActionProps } from '@aws-cdk/aws-lambda';



   Construction properties of the {@link PipelineInvokeAction Lambda invoke CodePipeline Action}.


   :extends: :py:class:`@aws-cdk/aws-codepipeline-api.CommonActionProps`


   .. py:attribute:: lambda

      The lambda function to invoke.


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionRef`


   .. py:attribute:: userParameters

      String to be used in the event data parameter passed to the Lambda function  See an example JSON event in the CodePipeline documentation.  https://docs.aws.amazon.com/codepipeline/latest/userguide/actions-invoke-lambda-function.html#actions-invoke-lambda-function-json-event-example


      :type: any


   .. py:attribute:: addPutJobResultPolicy

      Adds the "codepipeline:PutJobSuccessResult" and "codepipeline:PutJobFailureResult" for '*' resource to the Lambda execution role policy.  NOTE: the reason we can't add the specific pipeline ARN as a resource is to avoid a cyclic dependency between the pipeline and the Lambda function (the pipeline references) the Lambda and the Lambda needs permissions on the pipeline.


      :type: boolean or undefined


Runtime
^^^^^^^

.. py:class:: Runtime(name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.Runtime;

      .. code-tab:: javascript

         const { Runtime } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { Runtime } from '@aws-cdk/aws-lambda';



   Lambda function runtime environment.


   :implements: :py:class:`~@aws-cdk/aws-lambda.InlinableRuntime`
   :implements: :py:class:`~@aws-cdk/aws-lambda.InlinableJavaScriptRuntime`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-lambda.LambdaRuntimeProps`

   .. py:method:: toString() -> string

      Returns a string representation of an object. 


      :rtype: string


   .. py:attribute:: DotNetCore1

      :type: :py:class:`~@aws-cdk/aws-lambda.Runtime` *(readonly)* *(static)*


   .. py:attribute:: DotNetCore2

      :type: :py:class:`~@aws-cdk/aws-lambda.Runtime` *(readonly)* *(static)*


   .. py:attribute:: DotNetCore21

      :type: :py:class:`~@aws-cdk/aws-lambda.Runtime` *(readonly)* *(static)*


   .. py:attribute:: Go1x

      :type: :py:class:`~@aws-cdk/aws-lambda.Runtime` *(readonly)* *(static)*


   .. py:attribute:: Java8

      :type: :py:class:`~@aws-cdk/aws-lambda.Runtime` *(readonly)* *(static)*


   .. py:attribute:: NodeJS

      :type: :py:class:`~@aws-cdk/aws-lambda.InlinableJavaScriptRuntime` *(readonly)* *(static)*


   .. py:attribute:: NodeJS43

      :type: :py:class:`~@aws-cdk/aws-lambda.InlinableJavaScriptRuntime` *(readonly)* *(static)*


   .. py:attribute:: NodeJS43Edge

      :type: :py:class:`~@aws-cdk/aws-lambda.Runtime` *(readonly)* *(static)*


   .. py:attribute:: NodeJS610

      :type: :py:class:`~@aws-cdk/aws-lambda.InlinableJavaScriptRuntime` *(readonly)* *(static)*


   .. py:attribute:: NodeJS810

      :type: :py:class:`~@aws-cdk/aws-lambda.Runtime` *(readonly)* *(static)*


   .. py:attribute:: Python27

      :type: :py:class:`~@aws-cdk/aws-lambda.InlinableRuntime` *(readonly)* *(static)*


   .. py:attribute:: Python36

      :type: :py:class:`~@aws-cdk/aws-lambda.InlinableRuntime` *(readonly)* *(static)*


   .. py:attribute:: name

      The name of this runtime, as expected by the Lambda resource. 


      :type: string *(readonly)*


   .. py:attribute:: supportsInlineCode

      Whether the ``ZipFile`` (aka inline code) property can be used with this runtime. 


      :type: boolean *(readonly)*


S3Code
^^^^^^

.. py:class:: S3Code(bucket, key, [objectVersion])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.S3Code;

      .. code-tab:: javascript

         const { S3Code } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { S3Code } from '@aws-cdk/aws-lambda';



   Lambda code from an S3 archive.


   :extends: :py:class:`~@aws-cdk/aws-lambda.Code`
   :param bucket: 
   :type bucket: :py:class:`@aws-cdk/aws-s3.BucketRef`
   :param key: 
   :type key: string
   :param objectVersion: 
   :type objectVersion: string or undefined

   .. py:method:: toJSON() -> @aws-cdk/aws-lambda.cloudformation.FunctionResource.CodeProperty

      Called during stack synthesis to render the CodePropery for the Lambda function.


      :rtype: :py:class:`~@aws-cdk/aws-lambda.cloudformation.FunctionResource.CodeProperty`


   .. py:attribute:: key

      :type: string


   .. py:attribute:: objectVersion

      :type: string or undefined


SingletonFunction
^^^^^^^^^^^^^^^^^

.. py:class:: SingletonFunction(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.SingletonFunction;

      .. code-tab:: javascript

         const { SingletonFunction } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { SingletonFunction } from '@aws-cdk/aws-lambda';



   A Lambda that will only ever be added to a stack once.  The lambda is identified using the value of 'uuid'. Run 'uuidgen' for every SingletonLambda you create.


   :extends: :py:class:`~@aws-cdk/aws-lambda.FunctionRef`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-lambda.SingletonFunctionProps`

   .. py:method:: addPermission(name, permission)

      Adds a permission to the Lambda resource policy.


      :param name: 
      :type name: string
      :param permission: 
      :type permission: :py:class:`~@aws-cdk/aws-lambda.Permission`


   .. py:attribute:: canCreatePermissions

      Whether the addPermission() call adds any permissions  True for new Lambdas, false for imported Lambdas (they might live in different accounts).


      :type: boolean *(readonly)*


   .. py:attribute:: functionArn

      The ARN fo the function.


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionArn` *(readonly)*


   .. py:attribute:: functionName

      The name of the function.


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionName` *(readonly)*


   .. py:attribute:: role

      The IAM role associated with this function.


      :type: :py:class:`@aws-cdk/aws-iam.Role` or undefined *(readonly)*


SingletonFunctionProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SingletonFunctionProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.SingletonFunctionProps;

      .. code-tab:: javascript

         // SingletonFunctionProps is an interface

      .. code-tab:: typescript

         import { SingletonFunctionProps } from '@aws-cdk/aws-lambda';



   Properties for a newly created singleton Lambda


   :extends: :py:class:`~@aws-cdk/aws-lambda.FunctionProps`


   .. py:attribute:: uuid

      A unique identifier to identify this lambda  The identifier should be unique across all custom resource providers. We recommend generating a UUID per provider.


      :type: string


   .. py:attribute:: lambdaPurpose

      A descriptive name for the purpose of this Lambda.  If the Lambda does not have a physical name, this string will be reflected its generated name. The combination of lambdaPurpose and uuid must be unique.


      :type: string or undefined


Version
^^^^^^^

.. py:class:: Version(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.Version;

      .. code-tab:: javascript

         const { Version } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { Version } from '@aws-cdk/aws-lambda';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

VersionArn
^^^^^^^^^^

.. py:class:: VersionArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.VersionArn;

      .. code-tab:: javascript

         const { VersionArn } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { VersionArn } from '@aws-cdk/aws-lambda';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

VersionWeight (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: VersionWeight

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.VersionWeight;

      .. code-tab:: javascript

         // VersionWeight is an interface

      .. code-tab:: typescript

         import { VersionWeight } from '@aws-cdk/aws-lambda';



   A version/weight pair for routing traffic to Lambda functions




   .. py:attribute:: version

      The version to route traffic to


      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionVersion` *(readonly)*


   .. py:attribute:: weight

      How much weight to assign to this version (0..1)


      :type: number *(readonly)*



cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-lambda.cloudformation

AliasResource
~~~~~~~~~~~~~

.. py:class:: AliasResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.cloudformation.AliasResource;

      .. code-tab:: javascript

         const { cloudformation.AliasResource } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { cloudformation.AliasResource } from '@aws-cdk/aws-lambda';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``AliasResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``AliasResource``
   :type properties: :py:class:`~@aws-cdk/aws-lambda.cloudformation.AliasResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-lambda.AliasArn` *(readonly)*

   .. py:class:: AliasRoutingConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Lambda;

         .. code-tab:: java

            import software.amazon.awscdk.services.lambda.cloudformation.AliasResource.AliasRoutingConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.AliasResource.AliasRoutingConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AliasResource.AliasRoutingConfigurationProperty } from '@aws-cdk/aws-lambda';





      .. py:attribute:: additionalVersionWeights

         ``AliasResource.AliasRoutingConfigurationProperty.AdditionalVersionWeights``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-alias-aliasroutingconfiguration.html#cfn-lambda-alias-aliasroutingconfiguration-additionalversionweights


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-lambda.cloudformation.AliasResource.VersionWeightProperty`)[]


   .. py:class:: VersionWeightProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Lambda;

         .. code-tab:: java

            import software.amazon.awscdk.services.lambda.cloudformation.AliasResource.VersionWeightProperty;

         .. code-tab:: javascript

            // cloudformation.AliasResource.VersionWeightProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AliasResource.VersionWeightProperty } from '@aws-cdk/aws-lambda';





      .. py:attribute:: functionVersion

         ``AliasResource.VersionWeightProperty.FunctionVersion``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-alias-versionweight.html#cfn-lambda-alias-versionweight-functionversion


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: functionWeight

         ``AliasResource.VersionWeightProperty.FunctionWeight``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-alias-versionweight.html#cfn-lambda-alias-versionweight-functionweight


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`



AliasResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AliasResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.cloudformation.AliasResourceProps;

      .. code-tab:: javascript

         // cloudformation.AliasResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.AliasResourceProps } from '@aws-cdk/aws-lambda';





   .. py:attribute:: aliasName

      ``AWS::Lambda::Alias.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-alias.html#cfn-lambda-alias-name


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: functionName

      ``AWS::Lambda::Alias.FunctionName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-alias.html#cfn-lambda-alias-functionname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: functionVersion

      ``AWS::Lambda::Alias.FunctionVersion``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-alias.html#cfn-lambda-alias-functionversion


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: description

      ``AWS::Lambda::Alias.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-alias.html#cfn-lambda-alias-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: routingConfig

      ``AWS::Lambda::Alias.RoutingConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-alias.html#cfn-lambda-alias-routingconfig


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-lambda.cloudformation.AliasResource.AliasRoutingConfigurationProperty` or undefined


EventSourceMappingResource
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: EventSourceMappingResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.cloudformation.EventSourceMappingResource;

      .. code-tab:: javascript

         const { cloudformation.EventSourceMappingResource } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { cloudformation.EventSourceMappingResource } from '@aws-cdk/aws-lambda';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``EventSourceMappingResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``EventSourceMappingResource``
   :type properties: :py:class:`~@aws-cdk/aws-lambda.cloudformation.EventSourceMappingResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-lambda.EventSourceMappingName` *(readonly)*


EventSourceMappingResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: EventSourceMappingResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.cloudformation.EventSourceMappingResourceProps;

      .. code-tab:: javascript

         // cloudformation.EventSourceMappingResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.EventSourceMappingResourceProps } from '@aws-cdk/aws-lambda';





   .. py:attribute:: eventSourceArn

      ``AWS::Lambda::EventSourceMapping.EventSourceArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-eventsourcemapping.html#cfn-lambda-eventsourcemapping-eventsourcearn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: functionName

      ``AWS::Lambda::EventSourceMapping.FunctionName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-eventsourcemapping.html#cfn-lambda-eventsourcemapping-functionname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: batchSize

      ``AWS::Lambda::EventSourceMapping.BatchSize``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-eventsourcemapping.html#cfn-lambda-eventsourcemapping-batchsize


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: enabled

      ``AWS::Lambda::EventSourceMapping.Enabled``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-eventsourcemapping.html#cfn-lambda-eventsourcemapping-enabled


      :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: startingPosition

      ``AWS::Lambda::EventSourceMapping.StartingPosition``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-eventsourcemapping.html#cfn-lambda-eventsourcemapping-startingposition


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


FunctionResource
~~~~~~~~~~~~~~~~

.. py:class:: FunctionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.cloudformation.FunctionResource;

      .. code-tab:: javascript

         const { cloudformation.FunctionResource } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { cloudformation.FunctionResource } from '@aws-cdk/aws-lambda';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``FunctionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``FunctionResource``
   :type properties: :py:class:`~@aws-cdk/aws-lambda.cloudformation.FunctionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: functionArn

      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionArn` *(readonly)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-lambda.FunctionName` *(readonly)*

   .. py:class:: CodeProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Lambda;

         .. code-tab:: java

            import software.amazon.awscdk.services.lambda.cloudformation.FunctionResource.CodeProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.CodeProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.CodeProperty } from '@aws-cdk/aws-lambda';





      .. py:attribute:: s3Bucket

         ``FunctionResource.CodeProperty.S3Bucket``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-function-code.html#cfn-lambda-function-code-s3bucket


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: s3Key

         ``FunctionResource.CodeProperty.S3Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-function-code.html#cfn-lambda-function-code-s3key


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: s3ObjectVersion

         ``FunctionResource.CodeProperty.S3ObjectVersion``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-function-code.html#cfn-lambda-function-code-s3objectversion


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: zipFile

         ``FunctionResource.CodeProperty.ZipFile``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-function-code.html#cfn-lambda-function-code-zipfile


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: DeadLetterConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Lambda;

         .. code-tab:: java

            import software.amazon.awscdk.services.lambda.cloudformation.FunctionResource.DeadLetterConfigProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.DeadLetterConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.DeadLetterConfigProperty } from '@aws-cdk/aws-lambda';





      .. py:attribute:: targetArn

         ``FunctionResource.DeadLetterConfigProperty.TargetArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-function-deadletterconfig.html#cfn-lambda-function-deadletterconfig-targetarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: EnvironmentProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Lambda;

         .. code-tab:: java

            import software.amazon.awscdk.services.lambda.cloudformation.FunctionResource.EnvironmentProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.EnvironmentProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.EnvironmentProperty } from '@aws-cdk/aws-lambda';





      .. py:attribute:: variables

         ``FunctionResource.EnvironmentProperty.Variables``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-function-environment.html#cfn-lambda-function-environment-variables


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or string => (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`) or undefined


   .. py:class:: TracingConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Lambda;

         .. code-tab:: java

            import software.amazon.awscdk.services.lambda.cloudformation.FunctionResource.TracingConfigProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.TracingConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.TracingConfigProperty } from '@aws-cdk/aws-lambda';





      .. py:attribute:: mode

         ``FunctionResource.TracingConfigProperty.Mode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-function-tracingconfig.html#cfn-lambda-function-tracingconfig-mode


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: VpcConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Lambda;

         .. code-tab:: java

            import software.amazon.awscdk.services.lambda.cloudformation.FunctionResource.VpcConfigProperty;

         .. code-tab:: javascript

            // cloudformation.FunctionResource.VpcConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FunctionResource.VpcConfigProperty } from '@aws-cdk/aws-lambda';





      .. py:attribute:: securityGroupIds

         ``FunctionResource.VpcConfigProperty.SecurityGroupIds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-function-vpcconfig.html#cfn-lambda-function-vpcconfig-securitygroupids


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


      .. py:attribute:: subnetIds

         ``FunctionResource.VpcConfigProperty.SubnetIds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-lambda-function-vpcconfig.html#cfn-lambda-function-vpcconfig-subnetids


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]



FunctionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: FunctionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.cloudformation.FunctionResourceProps;

      .. code-tab:: javascript

         // cloudformation.FunctionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.FunctionResourceProps } from '@aws-cdk/aws-lambda';





   .. py:attribute:: code

      ``AWS::Lambda::Function.Code``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-code


      :type: :py:class:`~@aws-cdk/aws-lambda.cloudformation.FunctionResource.CodeProperty` or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: handler

      ``AWS::Lambda::Function.Handler``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-handler


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: role

      ``AWS::Lambda::Function.Role``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-role


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: runtime

      ``AWS::Lambda::Function.Runtime``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-runtime


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: deadLetterConfig

      ``AWS::Lambda::Function.DeadLetterConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-deadletterconfig


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-lambda.cloudformation.FunctionResource.DeadLetterConfigProperty` or undefined


   .. py:attribute:: description

      ``AWS::Lambda::Function.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: environment

      ``AWS::Lambda::Function.Environment``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-environment


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-lambda.cloudformation.FunctionResource.EnvironmentProperty` or undefined


   .. py:attribute:: functionName

      ``AWS::Lambda::Function.FunctionName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-functionname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: kmsKeyArn

      ``AWS::Lambda::Function.KmsKeyArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-kmskeyarn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: memorySize

      ``AWS::Lambda::Function.MemorySize``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-memorysize


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: reservedConcurrentExecutions

      ``AWS::Lambda::Function.ReservedConcurrentExecutions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-reservedconcurrentexecutions


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: tags

      ``AWS::Lambda::Function.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-tags


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`@aws-cdk/cdk.Tag`)[] or undefined


   .. py:attribute:: timeout

      ``AWS::Lambda::Function.Timeout``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-timeout


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: tracingConfig

      ``AWS::Lambda::Function.TracingConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-tracingconfig


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-lambda.cloudformation.FunctionResource.TracingConfigProperty` or undefined


   .. py:attribute:: vpcConfig

      ``AWS::Lambda::Function.VpcConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html#cfn-lambda-function-vpcconfig


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-lambda.cloudformation.FunctionResource.VpcConfigProperty` or undefined


PermissionResource
~~~~~~~~~~~~~~~~~~

.. py:class:: PermissionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.cloudformation.PermissionResource;

      .. code-tab:: javascript

         const { cloudformation.PermissionResource } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { cloudformation.PermissionResource } from '@aws-cdk/aws-lambda';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PermissionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PermissionResource``
   :type properties: :py:class:`~@aws-cdk/aws-lambda.cloudformation.PermissionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


PermissionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PermissionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.cloudformation.PermissionResourceProps;

      .. code-tab:: javascript

         // cloudformation.PermissionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PermissionResourceProps } from '@aws-cdk/aws-lambda';





   .. py:attribute:: action

      ``AWS::Lambda::Permission.Action``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-permission.html#cfn-lambda-permission-action


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: functionName

      ``AWS::Lambda::Permission.FunctionName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-permission.html#cfn-lambda-permission-functionname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: principal

      ``AWS::Lambda::Permission.Principal``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-permission.html#cfn-lambda-permission-principal


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: eventSourceToken

      ``AWS::Lambda::Permission.EventSourceToken``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-permission.html#cfn-lambda-permission-eventsourcetoken


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: sourceAccount

      ``AWS::Lambda::Permission.SourceAccount``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-permission.html#cfn-lambda-permission-sourceaccount


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: sourceArn

      ``AWS::Lambda::Permission.SourceArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-permission.html#cfn-lambda-permission-sourcearn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


VersionResource
~~~~~~~~~~~~~~~

.. py:class:: VersionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.cloudformation.VersionResource;

      .. code-tab:: javascript

         const { cloudformation.VersionResource } = require('@aws-cdk/aws-lambda');

      .. code-tab:: typescript

         import { cloudformation.VersionResource } from '@aws-cdk/aws-lambda';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``VersionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``VersionResource``
   :type properties: :py:class:`~@aws-cdk/aws-lambda.cloudformation.VersionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-lambda.VersionArn` *(readonly)*


   .. py:attribute:: version

      :type: :py:class:`~@aws-cdk/aws-lambda.Version` *(readonly)*


VersionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: VersionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Lambda;

      .. code-tab:: java

         import software.amazon.awscdk.services.lambda.cloudformation.VersionResourceProps;

      .. code-tab:: javascript

         // cloudformation.VersionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.VersionResourceProps } from '@aws-cdk/aws-lambda';





   .. py:attribute:: functionName

      ``AWS::Lambda::Version.FunctionName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-version.html#cfn-lambda-version-functionname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: codeSha256

      ``AWS::Lambda::Version.CodeSha256``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-version.html#cfn-lambda-version-codesha256


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: description

      ``AWS::Lambda::Version.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-version.html#cfn-lambda-version-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



.. py:currentmodule:: @aws-cdk/aws-lambda

